# soc-classification-vector-store

./: .dockerignore  .gcloudignore  .gitignore  .pre-commit-config.yaml  CODEOWNERS  DOCKERFILE  Dockerfile  Makefile  README.md  mkdocs.yml  pyproject.toml  run_cicd_soc_to_sandbox.sh
.github/workflows/: ci.yml
cicd/: cloudbuild_dev_and_sandbox.yaml  cloudbuild_promote_preprod.yaml  run_smoke_tests.sh
cicd/tests/: test_smoke_tests.py
docs/: guide.md  index.md
src/soc_classification_vector_store/api/: main.py
src/soc_classification_vector_store/api/models/: search_index_models.py  status_models.py
src/soc_classification_vector_store/api/routes/v1/: search_index.py  status.py
src/soc_classification_vector_store/utils/: common.py  vector_store.py
tests/: conftest.py  test_common.py  test_main.py  test_vector_store.py
